--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -61,6 +61,16 @@
 
 	<extensions defaultExtensionNs="org.consulo.java">
 		<getterSetterProvider implementation="org.jetbrains.plugins.javaFX.codeInsight.JavaFxGetterSetterPrototypeProvider"/>
+
+		<manifest.headerParser key="JavaFX-Application-Class" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="JavaFX-Version" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="JavaFX-Class-Path" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="Main-Class" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="implementation-vendor" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="implementation-title" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="implementation-version" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="JavaFX-Preloader-Class" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
+		<manifest.headerParser key="JavaFX-Fallback-Class" implementationClass="org.osmorc.manifest.lang.headerparser.impl.GenericComplexHeaderParser"/>
 	</extensions>
 
 	<actions>
