--- a/pom.xml
+++ b/pom.xml
@@ -76,16 +76,21 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>consulo.java</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>com.intellij.xml</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>com.intellij.properties</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -94,6 +99,7 @@
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>consulo-lang-impl-testing</artifactId>
