--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>be.cyberelf.nanoxml</groupId>
+			<artifactId>nanoxml</artifactId>
+			<version>2.2.3</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>consulo.java</artifactId>
 			<version>${project.version}</version>
