--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>consulo-util-rt</artifactId>
+			<artifactId>consulo-util-nodep</artifactId>
 			<version>${project.parent.version}</version>
 			<scope>provided</scope>
 		</dependency>
